# dob

./: .gitignore  Dockerfile.generate  Makefile  dbobserver.py  docker-compose.yml  generate_testdb.py  pyproject.toml  toxiproxy.json
dob/: __init__.py  __main__.py  _legacy.py  app.py  cli.py
dob/db/: __init__.py  backend.py  connection.py  lookup.py  queries.py  schema.py
dob/domain/: __init__.py  diff.py  observation.py  traversal.py
dob/settings/: __init__.py  connection_history.py  filters.py  links.py  preferences.py  store.py
dob/tools/: generate_testdb_mysql.py
dob/ui/: __init__.py  drilldown.py  flasher.py  formatting.py  link_actions.py  live_poller.py  ru_layout.py  sort_mixin.py  styles.tcss
dob/ui/screens/: __init__.py  connection_history.py  db_picker.py  expanded.py  filter_value.py  link_builder.py  link_manager.py  observation.py  open_db.py  row_picker.py  table_picker.py
dob/ui/widgets/: __init__.py  table_block.py
tests/: conftest.py  test_connection_history.py  test_diff.py  test_dsn_parser.py  test_mysql_backend.py  test_mysql_integration.py  test_traversal.py
