[project]
name = "dob"
version = "0.1.0"
description = "SQL DB graph explorer — observe a record and all its related data"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.2.5",
    "pymysql>=1.1",
    "cryptography>=42",
]

[project.scripts]
dob = "dob.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

